--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,14 @@ android {
         applicationId "com.golden.android.eyecare"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "3.2"
     }
+    repositories {
+        mavenCentral()
+    }
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -24,5 +29,12 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:support-v4:24.0.0'
-    compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.github.paolorotolo:appintro:4.1.0'
+    testCompile 'org.robolectric:robolectric:3.1.4'
+
+
+    compile('com.mikepenz:aboutlibraries:5.9.1@aar') {
+        transitive = true
+    }
+
 }
