--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,20 @@
         android:name=".Global"
         android:allowBackup="true"
         android:icon="@drawable/ic_eye"
+
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         >
+        <activity android:name=".IntroActivity"
+            android:label="Appintro"
+
+            android:configChanges="orientation|keyboardHidden|screenSize"
+
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
+            />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -49,7 +59,8 @@
             android:enabled="true">
             <intent-filter>
 
-                <action android:name="android.intent.action.USER_PRESENT"
+                <action android:name="android.intent.action.USER_PRESENT"></action>
+                    <action android:name="android.intent.action.BOOT_COMPLETED"
                     />
 
                 <category android:name="android.intent.category.DEFAULT"></category>
