appintro text style change main layout color change

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,8 +60,9 @@
             <intent-filter>
 
                 <action android:name="android.intent.action.USER_PRESENT"></action>
-                    <action android:name="android.intent.action.BOOT_COMPLETED"
-                    />
+                    <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.REBOOT"/>
+
 
                 <category android:name="android.intent.category.DEFAULT"></category>
             </intent-filter>
