--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.golden.android.eyecare">
+
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:name=".Global"
         android:allowBackup="true"
         android:icon="@drawable/ic_eye"
-
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
-        <activity android:name=".IntroActivity"
-            android:label="Appintro"
-
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".IntroActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            />
-            />
-
+            android:label="Appintro"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -37,13 +34,14 @@
             android:name=".Alert"
             android:excludeFromRecents="true"
             android:launchMode="singleInstance"
-            android:taskAffinity=""
             android:noHistory="true"
+            android:taskAffinity=""
             android:theme="@style/ThemeOverlay.AppCompat.Dialog.Alert">
             <intent-filter>
                 <action android:name="killAlert" />
             </intent-filter>
         </activity>
+
         <service
             android:name=".Checker"
             android:exported="false" />
@@ -53,18 +51,16 @@
 
         <receiver
             android:name=".MyAlarmReceiver"
-            android:process=":remote"></receiver>
+            android:process=":remote" />
         <receiver
             android:name=".ScreenReceiver"
             android:enabled="true">
             <intent-filter>
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.REBOOT" />
 
-                <action android:name="android.intent.action.USER_PRESENT"></action>
-                    <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                <action android:name="android.intent.action.REBOOT"/>
-
-
-                <category android:name="android.intent.category.DEFAULT"></category>
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
 
@@ -73,11 +69,9 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_count"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
-
-        <activity android:name=".Reward"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
-
-        </activity>
+        <activity
+            android:name=".Reward"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
     </application>
 
 </manifest>
