--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,9 @@ android {
     }
     repositories {
         mavenCentral()
+        maven {
+            url "https://jitpack.io"
+        }
     }
 
 
@@ -35,6 +38,10 @@ dependencies {
     compile 'com.android.support:support-v4:24.0.0'
     compile 'com.github.paolorotolo:appintro:4.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
+    compile 'com.github.recruit-lifestyle:FloatingView:2.2'
+
+
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.robolectric:robolectric:3.1.4'
 
