--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:name=".Global"
@@ -47,6 +48,9 @@
         <service
             android:name=".Checker"
             android:exported="false" />
+        <service android:name=".ForegroundService">
+
+        </service>
         <service
             android:name=".Timer"
             android:exported="false" />
